selecting file error correction
script linkage

--- a/popup.html
+++ b/popup.html
@@ -39,5 +39,6 @@
         <li>Select the `bookmarks.html` file exported from Chrome.</li>
     </ul>
     <button id="importBookmarks">Import Bookmarks</button>
+    <script src="popup.js"></script>
 </body>
 </html>
